--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "electron-updater-example",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "main": "main.js",
   "description": "electron-updater example project",
   "author": "Matt Haggard",
   "scripts": {
-    "publish": "electron-builder -p always"
+    "build": "electron-builder -p always"
   },
   "devDependencies": {
     "electron": "^14.0.1",
@@ -17,20 +17,20 @@
     "electron-updater": "^4.3.9"
   },
   "build": {
-    "appId": "com.github.iffy.electronupdaterexample",
-    "afterSign": "./build/notarize.js",
-    "mac": {
-      "category": "your.app.category.type"
-    },
+    "appId": "com.allcom.electron-updater",
     "win": {
       "target": "nsis"
-    },
-    "nsis": {
-      "oneClick": false
     },
     "linux": {
       "category": "your.app.category.type",
       "target": "AppImage"
-    }
+    },
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "pehrc",
+        "repo": "electron-teste"
+      }
+    ]
   }
 }
