--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "electron-updater example project",
   "author": "Matt Haggard",
   "scripts": {
-    "build": "electron-builder -p always"
+    "release": "electron-builder -p always"
   },
   "devDependencies": {
     "electron": "^14.0.1",
